# team_7_ws

./: .gitignore  README.md  bayesian_robotics_ws.rosinstall
src/: .rosinstall
src/Bayesian_Robotics/ar_drone_vision/: CMakeLists.txt
src/Team_4/: instructions_for_other_group.txt
src/Team_4/MBZIRC_field/: model.config  model.config~  model.sdf  model.sdf~
src/Team_4/my_robot/: model.sdf  model.sdf~  model_push.cc
src/ar_drone_vision/: CMakeLists.txt  package.xml
src/ar_drone_vision/launch/: circle_tracker.launch  landing_zone_detector.launch  landing_zone_tracker.launch  parameter_calibration.launch
src/ar_drone_vision/nodes/: base_detector.py  circle_detector.py  circle_tracker.py  corner_tracker.py  landing_zone_detector.py  landing_zone_tracker.py
src/drone_vision2/: CMakeLists.txt  package.xml
src/drone_vision2/launch/: circle_detector.launch  circle_tracker.launch
src/drone_vision2/src/: base_detector.py  base_detector.py~
src/feedback_controller/: CMakeLists.txt  package.xml
src/feedback_controller/src/: controller.py
src/kf/: CMakeLists.txt  package.xml
src/kf/src/: kf_node.py
src/mbzirc_gazebo/: CMakeLists.txt  package.xml
src/mbzirc_gazebo/launch/: mbzirc.launch
src/mbzirc_gazebo/worlds/: mbzirc_arena.world.xacro
src/object_localization/: CMakeLists.txt  package.xml
src/object_localization/src/: localize.py
src/roboteye/: CMakeLists.txt  package.xml
src/roboteye/src/: roboteye2.py~
src/truck/truck_control/: package.xml
src/truck/truck_description/: CMakeLists.txt  package.xml
src/truck/truck_gazebo/: CMakeLists.txt  (+1 more)
(+44 files in other folders)
